--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "chess-game-server",
-  "version": "1.0.0",
-  "description": "Serveur de jeu d'échecs en ligne avec WebSocket",
+  "name": "chess-multiplayer-server",
+  "version": "2.0.0",
+  "description": "Serveur d'échecs multijoueur avec IA",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["chess", "websocket", "game", "multiplayer"],
-  "author": "Assistant",
+  "keywords": ["chess", "multiplayer", "socket.io", "express"],
+  "author": "Assistant Claude",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "chess.js": "^1.0.0-beta.6",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   }
 }
